tests/transpiler/x/hs/short_circuit.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-20 10:18 GMT+7
boom a b = do
    putStrLn ("boom")
    return (True)


main :: IO ()
main = do
    putStrLn (if False && boom 1 2 then "true" else "false")
    putStrLn (if True || boom 1 2 then "true" else "false")
